tests/context_missing_field_bad.stderr
tests/context_missing_field_bad.sl:7:2: error: SL2030: required context field is missing
